--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://varad25.github.io"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-baseurl: /personal-jekyll-theme
+baseurl: /
 
 # Google tracking id to track your visitors
 
